[package]
name = "lua53-ext"
version = "0.1.1"
description = "Extension to jcmoyer's Lua 5.3 bindings"

authors = ["James Beedie <jellonator00@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/jellonator/rust-lua53-ext.git"
homepage = "https://github.com/jellonator/rust-lua53-ext"
documentation = "https://docs.rs/lua53-ext/"

keywords = [
	"lua",
	"bindings",
	"lua53",
	"extension"
]

[lib]
name = "luaext"
path = "src/lib.rs"

[dependencies]
lua = "0.0.10"
